--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,6 +22,10 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
   
+  <div class="field">
+    <%= f.label :picture, "Upload an Avatar" %>
+    <%= f.file_field :picture %>
+  </div>
 
 
   <div class="actions">
