--- a/app/assets/stylesheets/main_stylesheet.css.scss
+++ b/app/assets/stylesheets/main_stylesheet.css.scss
@@ -238,14 +238,78 @@ nav {
 #cropbox {
   text-align: center;
 }
-.horiz_cropbox{
-  width: 640 !important;
-  height: 480 !important;
+
+
+/* Forms */
+.login_form {
+  width: 40%;
+  background-color: $lightblue;
+  margin: auto;
+  font-size: 1.25em;
+  font-family: 'Open Sans', sans-serif;
+  border: 1px solid black;
+  border-radius: 10px 10px 10px 10px;
+  padding: 10px;
+  .field {
+    padding: 10px;
+  }
+  a {
+    font-size: 13pt;
+    margin: 0px 0px 0px 10px;
+    text-decoration: none;
+    color: $blue;
+    &:hover{
+      color: rgb(6, 72, 138);
+    }
+  }
 }
-.vert_cropbox {
-  width: 480;
-  height: 640;
+.textbox {
+  height: 25px;
+  width: 275px;
+  font-size: 13pt;
 }
+
+.btn {
+  background: $blue;
+  // -webkit-border-radius: 28;
+  // -moz-border-radius: 28;
+  // border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  margin-left: 10px;
+  margin-right: 6%;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  float: left;
+}
+
+.btn:hover {
+  background: rgb(6, 72, 138);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.clear_it {
+  clear: both;
+}
+
+.remember {
+  font-size: 12pt;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
