--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,76 @@
-<h1> About Page</h1>
+
+
+<div class="sidebar">
+  <div class="sidebar_box">
+    <div id="quicklinks">Quick Links</div>
+    <ul>
+      <li><%= link_to "What We Do", root_path %></li>
+      <li><%= link_to "Education", root_path %></li>
+      <li><%= link_to "Leadership Society", root_path %></li>
+      <li><%= link_to "Our Stories", root_path %></li>
+      <li><%= link_to "Our Impact", root_path %></li>
+    </ul>
+  </div>
+  
+  <div class="contact_box">
+    <div id="contactbox_title">Contact</div>
+     <p>Email: connect@northfieldunitedway.org<br><br>
+      Elizabeth Child, Exec Director<br>
+      Kathy Thacher, Associate Director<br><br>
+      1651 Jefferson Parkway<br>
+      Northfield, MN 55057<br>
+      (507) 664-3510<br></p>
+  </div>
+  
+  
+  
+  
+</div> <!-- end of sidebar -->
+
+<div class="main_content">
+  <h1 class="page_title"> About Page</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor tincidunt libero elementum convallis. Suspendisse potenti.
+  Pellentesque sit amet dapibus nibh. Etiam consectetur dui urna, sed viverra mi lobortis nec. In fringilla vitae neque quis interdum.
+  Fusce quis accumsan sem. Sed et ligula in orci maximus scelerisque sit amet a nibh. Praesent ut massa nibh. Suspendisse aliquet erat
+  ante, eu luctus augue rhoncus pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+  Nam placerat, nulla ut pharetra dignissim, turpis urna rhoncus leo, vel scelerisque quam leo eu quam. Nulla facilisi. Ut ipsum turpis,
+  pretium ac commodo ut, fermentum eget quam. Etiam at ante libero.</p><br><br>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor tincidunt libero elementum convallis. Suspendisse potenti.
+  Pellentesque sit amet dapibus nibh. Etiam consectetur dui urna, sed viverra mi lobortis nec. In fringilla vitae neque quis interdum.
+  Fusce quis accumsan sem. Sed et ligula in orci maximus scelerisque sit amet a nibh. Praesent ut massa nibh. Suspendisse aliquet erat
+  ante, eu luctus augue rhoncus pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+  Nam placerat, nulla ut pharetra dignissim, turpis urna rhoncus leo, vel scelerisque quam leo eu quam. Nulla facilisi. Ut ipsum turpis,
+  pretium ac commodo ut, fermentum eget quam. Etiam at ante libero.</p><br><br>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor tincidunt libero elementum convallis. Suspendisse potenti.
+  Pellentesque sit amet dapibus nibh. Etiam consectetur dui urna, sed viverra mi lobortis nec. In fringilla vitae neque quis interdum.
+  Fusce quis accumsan sem. Sed et ligula in orci maximus scelerisque sit amet a nibh. Praesent ut massa nibh. Suspendisse aliquet erat
+  ante, eu luctus augue rhoncus pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+  Nam placerat, nulla ut pharetra dignissim, turpis urna rhoncus leo, vel scelerisque quam leo eu quam. Nulla facilisi. Ut ipsum turpis,
+  pretium ac commodo ut, fermentum eget quam. Etiam at ante libero.</p><br><br>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor tincidunt libero elementum convallis. Suspendisse potenti.
+  Pellentesque sit amet dapibus nibh. Etiam consectetur dui urna, sed viverra mi lobortis nec. In fringilla vitae neque quis interdum.
+  Fusce quis accumsan sem. Sed et ligula in orci maximus scelerisque sit amet a nibh. Praesent ut massa nibh. Suspendisse aliquet erat
+  ante, eu luctus augue rhoncus pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+  Nam placerat, nulla ut pharetra dignissim, turpis urna rhoncus leo, vel scelerisque quam leo eu quam. Nulla facilisi. Ut ipsum turpis,
+  pretium ac commodo ut, fermentum eget quam. Etiam at ante libero.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor tincidunt libero elementum convallis. Suspendisse potenti.
+  Pellentesque sit amet dapibus nibh. Etiam consectetur dui urna, sed viverra mi lobortis nec. In fringilla vitae neque quis interdum.
+  Fusce quis accumsan sem. Sed et ligula in orci maximus scelerisque sit amet a nibh. Praesent ut massa nibh. Suspendisse aliquet erat
+  ante, eu luctus augue rhoncus pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+  Nam placerat, nulla ut pharetra dignissim, turpis urna rhoncus leo, vel scelerisque quam leo eu quam. Nulla facilisi. Ut ipsum turpis,
+  pretium ac commodo ut, fermentum eget quam. Etiam at ante libero.</p><br><br>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor tincidunt libero elementum convallis. Suspendisse potenti.
+  Pellentesque sit amet dapibus nibh. Etiam consectetur dui urna, sed viverra mi lobortis nec. In fringilla vitae neque quis interdum.
+  Fusce quis accumsan sem. Sed et ligula in orci maximus scelerisque sit amet a nibh. Praesent ut massa nibh. Suspendisse aliquet erat
+  ante, eu luctus augue rhoncus pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+  Nam placerat, nulla ut pharetra dignissim, turpis urna rhoncus leo, vel scelerisque quam leo eu quam. Nulla facilisi. Ut ipsum turpis,
+  pretium ac commodo ut, fermentum eget quam. Etiam at ante libero.</p><br><br>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor tincidunt libero elementum convallis. Suspendisse potenti.
+  Pellentesque sit amet dapibus nibh. Etiam consectetur dui urna, sed viverra mi lobortis nec. In fringilla vitae neque quis interdum.
+  Fusce quis accumsan sem. Sed et ligula in orci maximus scelerisque sit amet a nibh. Praesent ut massa nibh. Suspendisse aliquet erat
+  ante, eu luctus augue rhoncus pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+  Nam placerat, nulla ut pharetra dignissim, turpis urna rhoncus leo, vel scelerisque quam leo eu quam. Nulla facilisi. Ut ipsum turpis,
+  pretium ac commodo ut, fermentum eget quam. Etiam at ante libero.</p>
+</div>
+
+<div class="clear_it"></div>
