--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
   <div class="section group"> <!-- row 1 -->
     <div class="col span_1_of_3">
       <div class="sub_heading">
-        <h3>News</h3>
+        <h3>Recent Articles</h3>
       </div>
     </div>
     
