--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,76 +1,43 @@
 
 
-<div class="sidebar">
-  <div class="sidebar_box">
-    <div id="quicklinks">Quick Links</div>
-    <ul>
-      <li><%= link_to "What We Do", root_path %></li>
-      <li><%= link_to "Education", root_path %></li>
-      <li><%= link_to "Leadership Society", root_path %></li>
-      <li><%= link_to "Our Stories", root_path %></li>
-      <li><%= link_to "Our Impact", root_path %></li>
-    </ul>
-  </div>
+<!--<div class="sidebar">-->
+<!--  <div class="sidebar_box">-->
+<!--    <div id="quicklinks">Quick Links</div>-->
+<!--    <ul>-->
+<!--      <li><%#= link_to "What We Do", root_path %></li>-->
+<!--      <li><%#= link_to "Education", root_path %></li>-->
+<!--      <li><%#= link_to "Leadership Society", root_path %></li>-->
+<!--      <li><%#= link_to "Our Stories", root_path %></li>-->
+<!--      <li><%#= link_to "Our Impact", root_path %></li>-->
+<!--    </ul>-->
+<!--  </div>-->
   
-  <div class="contact_box">
-    <div id="contactbox_title">Contact</div>
-     <p>Email: connect@northfieldunitedway.org<br><br>
-      Elizabeth Child, Exec Director<br>
-      Kathy Thacher, Associate Director<br><br>
-      1651 Jefferson Parkway<br>
-      Northfield, MN 55057<br>
-      (507) 664-3510<br></p>
-  </div>
-  
-  
-  
-  
-</div> <!-- end of sidebar -->
+<!--  <div class="contact_box">-->
+<!--    <div id="contactbox_title">Contact</div>-->
+<!--     <p>Email: connect@northfieldunitedway.org<br><br>-->
+<!--      Elizabeth Child, Exec Director<br>-->
+<!--      Kathy Thacher, Associate Director<br><br>-->
+<!--      1651 Jefferson Parkway<br>-->
+<!--      Northfield, MN 55057<br>-->
+<!--      (507) 664-3510<br></p>-->
+<!--  </div>-->
+<!--</div> <!-- end of sidebar -->
 
-<div class="main_content">
+
   <h1 class="page_title"> About Page</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor tincidunt libero elementum convallis. Suspendisse potenti.
-  Pellentesque sit amet dapibus nibh. Etiam consectetur dui urna, sed viverra mi lobortis nec. In fringilla vitae neque quis interdum.
-  Fusce quis accumsan sem. Sed et ligula in orci maximus scelerisque sit amet a nibh. Praesent ut massa nibh. Suspendisse aliquet erat
-  ante, eu luctus augue rhoncus pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-  Nam placerat, nulla ut pharetra dignissim, turpis urna rhoncus leo, vel scelerisque quam leo eu quam. Nulla facilisi. Ut ipsum turpis,
-  pretium ac commodo ut, fermentum eget quam. Etiam at ante libero.</p><br><br>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor tincidunt libero elementum convallis. Suspendisse potenti.
-  Pellentesque sit amet dapibus nibh. Etiam consectetur dui urna, sed viverra mi lobortis nec. In fringilla vitae neque quis interdum.
-  Fusce quis accumsan sem. Sed et ligula in orci maximus scelerisque sit amet a nibh. Praesent ut massa nibh. Suspendisse aliquet erat
-  ante, eu luctus augue rhoncus pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-  Nam placerat, nulla ut pharetra dignissim, turpis urna rhoncus leo, vel scelerisque quam leo eu quam. Nulla facilisi. Ut ipsum turpis,
-  pretium ac commodo ut, fermentum eget quam. Etiam at ante libero.</p><br><br>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor tincidunt libero elementum convallis. Suspendisse potenti.
-  Pellentesque sit amet dapibus nibh. Etiam consectetur dui urna, sed viverra mi lobortis nec. In fringilla vitae neque quis interdum.
-  Fusce quis accumsan sem. Sed et ligula in orci maximus scelerisque sit amet a nibh. Praesent ut massa nibh. Suspendisse aliquet erat
-  ante, eu luctus augue rhoncus pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-  Nam placerat, nulla ut pharetra dignissim, turpis urna rhoncus leo, vel scelerisque quam leo eu quam. Nulla facilisi. Ut ipsum turpis,
-  pretium ac commodo ut, fermentum eget quam. Etiam at ante libero.</p><br><br>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor tincidunt libero elementum convallis. Suspendisse potenti.
-  Pellentesque sit amet dapibus nibh. Etiam consectetur dui urna, sed viverra mi lobortis nec. In fringilla vitae neque quis interdum.
-  Fusce quis accumsan sem. Sed et ligula in orci maximus scelerisque sit amet a nibh. Praesent ut massa nibh. Suspendisse aliquet erat
-  ante, eu luctus augue rhoncus pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-  Nam placerat, nulla ut pharetra dignissim, turpis urna rhoncus leo, vel scelerisque quam leo eu quam. Nulla facilisi. Ut ipsum turpis,
-  pretium ac commodo ut, fermentum eget quam. Etiam at ante libero.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor tincidunt libero elementum convallis. Suspendisse potenti.
-  Pellentesque sit amet dapibus nibh. Etiam consectetur dui urna, sed viverra mi lobortis nec. In fringilla vitae neque quis interdum.
-  Fusce quis accumsan sem. Sed et ligula in orci maximus scelerisque sit amet a nibh. Praesent ut massa nibh. Suspendisse aliquet erat
-  ante, eu luctus augue rhoncus pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-  Nam placerat, nulla ut pharetra dignissim, turpis urna rhoncus leo, vel scelerisque quam leo eu quam. Nulla facilisi. Ut ipsum turpis,
-  pretium ac commodo ut, fermentum eget quam. Etiam at ante libero.</p><br><br>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor tincidunt libero elementum convallis. Suspendisse potenti.
-  Pellentesque sit amet dapibus nibh. Etiam consectetur dui urna, sed viverra mi lobortis nec. In fringilla vitae neque quis interdum.
-  Fusce quis accumsan sem. Sed et ligula in orci maximus scelerisque sit amet a nibh. Praesent ut massa nibh. Suspendisse aliquet erat
-  ante, eu luctus augue rhoncus pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-  Nam placerat, nulla ut pharetra dignissim, turpis urna rhoncus leo, vel scelerisque quam leo eu quam. Nulla facilisi. Ut ipsum turpis,
-  pretium ac commodo ut, fermentum eget quam. Etiam at ante libero.</p><br><br>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor tincidunt libero elementum convallis. Suspendisse potenti.
-  Pellentesque sit amet dapibus nibh. Etiam consectetur dui urna, sed viverra mi lobortis nec. In fringilla vitae neque quis interdum.
-  Fusce quis accumsan sem. Sed et ligula in orci maximus scelerisque sit amet a nibh. Praesent ut massa nibh. Suspendisse aliquet erat
-  ante, eu luctus augue rhoncus pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-  Nam placerat, nulla ut pharetra dignissim, turpis urna rhoncus leo, vel scelerisque quam leo eu quam. Nulla facilisi. Ut ipsum turpis,
-  pretium ac commodo ut, fermentum eget quam. Etiam at ante libero.</p>
-</div>
+  <p>The Northfield Area United Way helps one-in-three residents in our community lead fulfilling lives. For more than 40 years 
+  the Northfield Area United Way has fostered a caring community with both nationally recognized programs and unsung services that
+  have untold impact.  Our agencies help families and individuals in crisis situations that can result in food shortages, lack of safe housing, job loss and disability.
+And our agencies also help us raise our children with hope and strong ethics. They offer incredible service learning opportunities, chances for our disabled children to 
+thrive and career goals that are achievable because of high graduation rates — especially among our at-risk populations.
+</p><br>
+<p>Rather than funding Band-Aid solutions, our United Way agencies are designing evidence-based programs with measurable outcomes. For
+an individual, that means getting help that makes a long-term difference.</p><br>
+<p><strong>100% Local:</strong> Your donation stays in the Northfield area. One gift helps in so many ways, striking a balance between helping those in need today
+and investing in a brighter future.</p><br>
+<p>Our administration costs are low. Eighty-seven cents of every dollar contributed goes fund programs. Your donation also helps us organize volunteerism – 
+outstripping what your contribution could buy by putting hands to work for no cost.</p>
+  
+  
 
-<div class="clear_it"></div>
+<!--<div class="clear_it"></div>-->
