--- a/app/assets/stylesheets/main_stylesheet.css.scss
+++ b/app/assets/stylesheets/main_stylesheet.css.scss
@@ -30,7 +30,6 @@ h3 {
 .sub_heading {
   border-bottom: 2px solid $red;
   margin-right: 200px;  
-  
 }
  
 .large_wrapper{
@@ -99,34 +98,6 @@ h3 {
   }
   
   
-    // li {
-    // float: left; 
-    // a:link, a:visited {
-    //   display: block;
-    //   color: white;
-    //   background-color: $blue;
-    //   text-align: center;
-    //   padding: 10px;
-    //   text-decoration: none;
-    //   font-size: 1.75em;
-    //   font-family: 'Open Sans', sans-serif;
-    //   text-transform: uppercase;
-    //   letter-spacing: -1px;
-    //   border-left: 1px solid white;
-    //   }
-    // a:hover, a:active {
-    // background-color: white;
-    // color: $blue;
-    // }
-
-  
-  
-  
-  
-  
-  
-  
-  
   .contact_box {
     background-color: #DAE2ED;
     color: $blue;
@@ -134,6 +105,11 @@ h3 {
     margin: auto;
     margin-top: 100px;
     border-radius: 20px 20px 20px 20px;
+    a {
+      text-decoration: none;
+      font-size: .75em;
+      color: $red;
+    }
     #contactbox_title {
       background-color: $blue;
       color: white;
@@ -422,6 +398,10 @@ nav {
   #login_links {
     margin-left: 25%;
   }
+  .sub_heading {
+  border-bottom: 2px solid $red;
+  margin-right: 100px;  
+}
 }
 
 
@@ -456,6 +436,10 @@ nav li {
 
 a:link, a:focus {
    //font-size: 1em;
+}
+
+.sub_heading h3 {
+  font-size: 1.25em;
 }
 
 }
