--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -24,7 +24,7 @@
 <!--</div> <!-- end of sidebar -->
 
 
-  <h1 class="page_title"> About Page</h1>
+  <h1 class="page_title"> About Us</h1>
   <p>The Northfield Area United Way helps one-in-three residents in our community lead fulfilling lives. For more than 40 years 
   the Northfield Area United Way has fostered a caring community with both nationally recognized programs and unsung services that
   have untold impact.  Our agencies help families and individuals in crisis situations that can result in food shortages, lack of safe housing, job loss and disability.
