--- a/app/assets/stylesheets/main_stylesheet.css.scss
+++ b/app/assets/stylesheets/main_stylesheet.css.scss
@@ -47,6 +47,10 @@ h3 {
   }
 }
 
+.clear_it {
+  clear: both;
+}
+
 .page_title {
   text-align: center;
   margin-bottom: 30px;
@@ -64,7 +68,7 @@ h3 {
   float: right;
   height: 100%;
   width: 25%;
-  margin-top: 150px;
+  margin-top: 135px;
   .sidebar_box {
     background-color: #DAE2ED;
     color: $blue;
@@ -123,8 +127,6 @@ h3 {
     }
   }
 }
-
-
 
 
 
@@ -273,6 +275,8 @@ header {
   box-sizing: border-box;
 }
 
+
+
 /* navbar */
 
 nav {
@@ -308,6 +312,8 @@ nav {
 #home_link {
    border-left: none;
 }
+
+
 
 /* Crop Page */
 #cropbox_container {
@@ -349,7 +355,7 @@ nav {
   font-size: 13pt;
 }
 
-.btn {
+.login_btn {
   background: $blue;
   // -webkit-border-radius: 28;
   // -moz-border-radius: 28;
@@ -366,14 +372,33 @@ nav {
   float: left;
 }
 
-.btn:hover {
+.login_btn:hover {
   background: rgb(6, 72, 138);
   text-decoration: none;
   cursor: pointer;
 }
 
-.clear_it {
-  clear: both;
+.signup_btn {
+  background: $blue;
+  font-family: Arial;
+  color: white;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.signup_btn:hover {
+  background: rgb(6, 72, 138);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#have_account {
+  margin-left: 10px;
+  margin-top: 10px;
 }
 
 .remember {
@@ -381,6 +406,70 @@ nav {
 }
 
 
+/* Admin Page */
+#new_post_button {
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+  text-decoration: none;
+  color: white;
+  background-color: $blue;
+  font-family: Arial;
+  padding: 10px;
+  font-size: 2em;
+  display: block;
+  width: 40%;
+  margin: auto;
+  margin-bottom: 50px;
+  text-align: center;
+  &:hover {
+    background-color: $lightblue;
+  }
+  
+}
+
+#posts_list {
+ a {
+   font-size: 1.5em;
+   text-decoration: none;
+   color: $blue;
+ }
+ .post {
+   margin-bottom: 30px;
+   background-color: #DAE2ED;
+   padding: 15px 0px 15px 0px;
+   border: 2px solid $blue;
+   .post_buttons {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+    text-decoration: none;
+    color: white;
+    background-color: $blue;
+    font-family: Arial;
+    padding: 5px 15px 5px 15px;
+    font-size: 1.25em;
+    margin-right: 15px;
+    margin-top: 65px;
+    &:hover {
+      background-color: $lightblue;
+    }
+   }
+  .delete_button {
+     background-color: $red;
+     &:hover {
+       background-color: #ffb2b2;
+     }
+   }
+
+   img {
+     width: 200px;
+     float: left;
+     margin-left: 10px;
+     margin-right: 10px;
+   }
+ }
+}
 
 
 
