--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,36 +1,43 @@
-<h2>Sign up</h2>
+<div class="small_wrapper">
+  <h1>Create Account</h1>
+  <div class="login_form">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), 
+      html: { multipart: true }) do |f| %>
+      <%= devise_error_messages! %>
+    
+      <div class="field">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, class: "textbox" %>
+      </div>
+    
+      <div class="field">
+        <%= f.label :password %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "off", class: "textbox" %>
+      </div>
+    
+      <div class="field">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "textbox" %>
+      </div>
+      
+      <div class="actions">
+        <%= f.submit "Sign up", class: "signup_btn" %>
+      </div>
+      
+      <div class="field">
+        <%= f.label :picture, "Upload an image for your profile" %>
+        <%= f.file_field :picture, class: "upload_btn" %>
+      </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), 
-  html: { multipart: true }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <% end %>
+    
+    <div id="have_account">
+      Already have an account?
+      <%= render "devise/shared/links" %>
+    </div>
+    
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :picture, "Upload an Avatar" %>
-    <%= f.file_field :picture %>
-  </div>
-
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div> <!-- end of wrapper -->
