--- a/app/assets/stylesheets/main_stylesheet.css.scss
+++ b/app/assets/stylesheets/main_stylesheet.css.scss
@@ -351,7 +351,8 @@ nav {
 }
 .textbox {
   height: 25px;
-  width: 275px;
+  width: 85%;
+  // width: 275px;
   font-size: 13pt;
 }
 
@@ -471,6 +472,64 @@ nav {
  }
 }
 
+
+
+/* Post Form */
+.post_form {
+  background-color: lightgray;
+  padding-top: 20px;
+  border: 2px solid gray;
+  border-radius: 20px 20px 20px 20px;
+
+  label {
+    font-size: 2em;
+    color: $blue;
+  }
+  p {
+    padding-bottom: 20px;
+    margin-left: -75px;
+  }
+  .textbox-2 {
+    width: 100%;
+    font-size: 18pt;
+  }
+  .textarea {
+    width: 100%;
+    height: 60px;
+    font-size: 14pt;
+  }
+  .new_post_btn {
+    background: $blue;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    width: 30%;
+    margin-left: 34%;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    &:hover {
+      background: $lightblue;
+      cursor: pointer;
+      text-decoration: none;
+    }
+  }
+  .image_upload {
+    font-size: 1.25em;
+    color: $blue;
+    margin-left: 50px;
+    margin-right: 100px;
+    float: left;
+  }
+  .image-orientation {
+    float: left;
+
+  }
+  #checkbox_text {
+    font-size: 1em;
+  }
+}
 
 
 
