--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,48 +1,54 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="small_wrapper">
+  <h1>Edit Account Details</h1>
+  <div class="edit_profile_form">  
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
+      <%= devise_error_messages! %>
+    
+      <div class="field">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, class: "textbox" %>
+      </div>
+    
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
+    
+      <div class="field">
+        <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+        <%= f.password_field :password, autocomplete: "off", class: "textbox" %>
+      </div>
+    
+      <div class="field">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "textbox" %>
+      </div>
+    
+      <div class="field">
+        <%= f.label :current_password, "Enter Current Password to Confirm Changes" %><br />
+        <%= f.password_field :current_password, autocomplete: "off", class: "textbox" %>
+      </div>
+      
+      <h2>Change Profile Picture</h2>
+      
+      <% if current_user.picture.url.present? %>
+        <%= image_tag(current_user.picture.url(:large)) %>
+      <% end %>
+      
+      <div class="field" id="update_image">
+        <%= f.file_field :picture %>
+      </div>
+    
+      <div id="update_btn_group">
+        <div class="actions">
+          <%= f.submit "Update", class: "signup_btn", id: "update_btn" %>
+        </div>
+      <% end %>
+      
+      
+        <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "signup_btn", id: "cancel_btn" %>
+      </div>
+    <div class="clear_it"></div>
+    
+    <%= link_to "< Back", :back %>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-  
-  <% if current_user.picture.url.present? %>
-    <%= image_tag(current_user.picture.url(:large)) %>
-  <% end %>
-  
-  <div class="field">
-    <%= f.file_field :picture %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
